fix some styling issues on phone, make 2 column mode collapse into 1 column when there isn't enough space

--- a/Frontend/src/app/app.component.scss
+++ b/Frontend/src/app/app.component.scss
@@ -1,14 +1,22 @@
 .main {
-  height: 100%;
-  display: grid;
-  grid-template-rows: auto 1fr;
-  grid-template-columns: 1fr;
-  background-color: #FAFAFA;
-  .mat-toolbar {
-    grid-row: 1 / span 1;
+  top: 64px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  @media (max-width: 599px) {
+    top: 56px;
+  }
+
+  @media not print {
+    position: absolute;
+    .mat-toolbar {
+      position: fixed;
+      top: 0;
+      z-index: 2;
+    }
   }
   .mat-sidenav-container {
-    grid-row: 2 / span 1;
+    min-height: 100%;
   }
 }
 
