--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -26,9 +26,7 @@ $background: map-get($theme, background);
 }
 
 html, body {
-  width: 100%;
-  height: 100%;
-
+  min-height: 100%;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -47,7 +45,12 @@ html, body {
 }
 
 .main-card {
-  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
   justify-content: center;
   align-content: center;
   display: grid;
@@ -72,6 +75,9 @@ html, body {
   position: fixed !important;
   bottom: 23px;
   right: 23px;
+  @media print {
+    visibility: hidden;
+  }
 }
 
 .mat-accordion .mat-expansion-panel-header-title,
@@ -98,17 +104,30 @@ html, body {
     align-items: baseline;
     grid-column-gap: 8px;
     grid-template-columns: 1fr 1fr;
+    @media (max-width: 460px) {
+      grid-template-columns: 1fr;
+    }
   }
-
 }
 
 .span-2-columns {
   grid-column: span 2;
+  @media (max-width: 460px) {
+    grid-column: span 1;
+  }
+
   .mat-slide-toggle {
     padding-bottom: 16px;
     &:not(:first-child) {
       padding-left: 8px;
     }
+  }
+}
+
+.form-field-button {
+  display: flex;
+  .mat-form-field {
+    flex-grow: 1;
   }
 }
 
@@ -138,6 +157,13 @@ html, body {
     }
     justify-content: flex-end;
     padding: 8px 8px 8px 0;
+  }
+}
+
+@media print {
+  .mat-row {
+    page-break-inside: avoid;
+    page-break-after: auto;
   }
 }
 
